src/styles/pages/_home.scss
.container {
  display: flex;
  flex-direction: column;
}
.aligner {
  @include for-media($tablet) {
    margin: 0 auto;
    width: 70.8rem;
  }
  @include for-media($laptop) {
    width: 94.3rem;
  }
  @include for-media($desktop) {
    width: 120.6rem;
  }
}
.hero {
  background-image: linear-gradient(
      162deg,
      rgba($color: $dark-navy, $alpha: 0.8) 0,
      rgba($color: $black, $alpha: 0.1) 100%
    ),
    url("images/hero-bg.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  padding: 0 2rem;
  &__content {
    padding: 0;
    margin: 4.5rem 0 4.2rem;
    @include for-media($tablet) {
      margin: 10.5rem auto 9.5rem;
    }
    @include for-media($laptop) {
      margin: 8.7rem 0 8.8rem;
    }
    @include for-media($desktop) {
      margin: 20rem 0 19.1rem;
    }
  }
  &__heading {
    max-width: 24.6rem;
    margin-bottom: 1.5rem;
    @include for-media($tablet) {
      margin-bottom: 1rem;
    }
    @include for-media($laptop) {
      margin-bottom: 1.5rem;
    }
    @include for-media($desktop) {
      max-width: 59rem;
      margin-bottom: 2.5rem;
    }
  }
  &__para {
    max-width: 24rem;
    margin-bottom: 2.8rem;
    @include for-media($tablet) {
      max-width: 35rem;
      margin-bottom: 3.5rem;
    }
    @include for-media($laptop) {
      max-width: 48rem;
    }
    @include for-media($desktop) {
      max-width: 58rem;
    }
  }
  @include for-media($tablet) {
    background-position: inherit;
    background-size: auto;
  }
  @include for-media($laptop) {
    background-position: center;
    background-size: cover;
  }
}
.rignet {
  background: linear-gradient(90deg, $light-orange 0, $dark-orange 100%),
    url("images/construction.png");
  background-size: 100% 72%, 100% 28%;
  background-repeat: no-repeat;
  background-position: top, bottom;
  &__content {
    padding-bottom: 21.9rem;
    @include for-media($tablet) {
      padding-bottom: 32rem;
    }
    @include for-media($desktop) {
      padding-bottom: 37rem;
    }
  }
  &__row {
    @include for-media($tablet) {
      margin-bottom: 1.2rem;
    }
    @include for-media($laptop) {
      margin-bottom: 0.6rem;
    }
    @include for-media($desktop) {
      margin-bottom: 0;
    }
  }
  &__column {
    &:last-child {
      box-sizing: border-box;
      padding-left: 0.6rem;
      @include for-media($desktop) {
        padding-left: 1rem;
      }
    }
  }
  &__title {
    box-sizing: border-box;
    padding: 4.5rem 2rem 2.5rem;
    margin-right: 0.75rem;
    @include for-media($tablet) {
      padding: 2.5rem 0 0 2.8rem;
    }
    @include for-media($laptop) {
      padding: 4.5rem 0 0 3rem;
    }
    @include for-media($desktop) {
      max-width: 50rem;
      margin-right: 11rem;
      padding: 6.5rem 0 0 3.5rem;
    }
  }
  &__superscript {
    margin: 0 0 0.5rem;
    @include for-media($laptop) {
      margin-bottom: 0;
    }
  }
  &__heading {
    max-width: 26rem;
    margin: 0 0 1rem;
    @include for-media($tablet) {
      max-width: 22rem;
    }
    @include for-media($laptop) {
      margin: 0 0 0.5rem;
      max-width: 28rem;
    }
    @include for-media($desktop) {
      margin-bottom: 1.5rem;
      max-width: 35rem;
    }
  }
  &__icon {
    display: none;
    @include for-media($desktop) {
      display: block;
      margin: 0 2rem 3rem 1.5rem;
      height: 4rem;
      width: 0.5rem;
      border: 1px solid $white;
      float: left;
      transform: rotate(20deg);
    }
  }
  @include for-media($tablet) {
    padding: 5rem 0 0;
    background-size: 100% 50%, 100% 50%;
  }
  @include for-media($laptop) {
    background-size: 100% 55%, 100% 45%;
  }
  @include for-media($desktop) {
    background-size: 100% 50%, 100% 50%;
  }
}
.growth {
  background: linear-gradient(
    90deg,
    rgba(3, 15, 33, 1) 0%,
    rgba(64, 70, 92, 1) 100%
  );
  &__content {
    padding: 4.2rem 2rem 0;
    @include for-media($tablet) {
      margin: 0 auto;
      padding: 5rem 0 0.3rem;
    }
    @include for-media($laptop) {
      padding: 0 0 1rem 0;
    }
    @include for-media($desktop) {
      padding-bottom: 0;
    }
  }
  &__row {
    @include for-media($laptop) {
      margin-bottom: 0.5rem;
    }
  }
  &__header {
    margin-bottom: 2.5rem;
    @include for-media($laptop) {
      margin-top: 6.5rem;
    }
    @include for-media($desktop) {
      margin-top: 7.5rem;
      flex: 30%;
      min-width: 30%;
    }
  }
  &__title {
    max-width: 24rem;
    margin-bottom: 1rem;
    @include for-media($tablet) {
      margin-bottom: 1.5rem;
    }
    @include for-media($laptop) {
      max-width: 28rem;
      margin-bottom: 2.5rem;
    }
    @include for-media($desktop) {
      max-width: 35rem;
      margin-bottom: 3rem;
    }
  }
  &__para {
    margin-bottom: 2.5rem;
    @include for-media($tablet) {
      margin-bottom: 3rem;
      max-width: 90%;
    }
    @include for-media($laptop) {
      margin-bottom: 4rem;
    }
    @include for-media($desktop) {
      margin-left: 4rem;
    }
  }
  &__btn {
    @include for-media($desktop) {
      margin-left: 4rem;
    }
  }
  &__cards {
    margin-bottom: 4rem;
    @include for-media($tablet) {
      display: flex;
      margin-bottom: 0;
    }
    @include for-media($laptop) {
      margin-top: 6rem;
    }
    @include for-media($desktop) {
      margin: 8rem 0 0 0.5rem;
    }
  }
  &__column {
    &:last-child {
      @include for-media($tablet) {
        margin-left: 4rem;
      }
      @include for-media($laptop) {
        margin-left: 5.5rem;
      }
      @include for-media($desktop) {
        margin-left: 7rem;
      }
    }
    @include for-media($tablet) {
      margin-left: 1rem;
      max-width: 21rem;
    }
    @include for-media($laptop) {
      max-width: 28rem;
      margin-bottom: 3rem;
    }
    @include for-media($desktop) {
      margin-bottom: 3.8rem;
      max-width: 37rem;
    }
  }
}

